Hoofdstuk een aangepast

--- a/Test.tex
+++ b/Test.tex
@@ -21,6 +21,7 @@ Dit is om het concept te testen.
  Ik zal hier enkele subsecties maken die voorlopig nog leeg zijn.
  
  \section{Eerste Hoofdstuk}
+ Ik schrijf nu wat tekst in het eerste hoofdstuk.
  \section{Tweede Hoofdstuk}
  \section{Derde Hoofdstuk}
 
