--- a/Test.tex
+++ b/Test.tex
@@ -22,6 +22,7 @@ Dit is om het concept te testen.
  
  \section{Eerste Hoofdstuk}
  Ik schrijf nu wat tekst in het eerste hoofdstuk.
+ Deze zin staat in dit document.
  \section{Tweede Hoofdstuk}
  Deze keer schrijf ik iets in het tweede hoofdstuk
  \section{Derde Hoofdstuk}
