--- a/Test.tex
+++ b/Test.tex
@@ -26,10 +26,12 @@ Dit is om het concept te testen.
  Deze zin staat in dit document.
 
  In deze versie van het document staat een andere zin.
- Deze zin staat in dit document.
+ 
+Gaat het nu goed als ik hier iets bijschrijf?
 
  \section{Tweede Hoofdstuk}
- Deze keer schrijf ik iets in het tweede hoofdstuk
+ Deze keer schrijf ik iets in het tweede hoofdstuk.
+ Enne, hier ook?
  \section{Derde Hoofdstuk}
 
 \end{document}  
