Added definition of locus of integrability

--- a/nov.tex
+++ b/nov.tex
@@ -179,15 +179,16 @@
 \newtheorem{problem}[subsection]{Problem}
 \newtheorem{claim}[subsection]{Claim}
 \newtheorem{maintheorem}[subsection]{Main Theorem}
+\newtheorem{def-prop}[subsection]{Proposition-Definition}
+\newtheorem{def-theorem}[subsection]{Theorem-Definition}
+\newtheorem{def-lem}[subsection]{Lemma-Definition}
 
 
 \theoremstyle{definition}
-\newtheorem{defn}[subsubsection]{Definition}
-\newtheorem{example}[subsubsection]{Example}
-\newtheorem{xca}[subsubsection]{Exercise}
-\newtheorem{def-prop}[subsubsection]{Proposition-Definition}
-\newtheorem{def-theorem}[subsubsection]{Theorem-Definition}
-\newtheorem{def-lem}[subsubsection]{Lemma-Definition}
+\newtheorem{defn}[subsection]{Definition}
+\newtheorem{example}[subsection]{Example}
+\newtheorem{xca}[subsection]{Exercise}
+
 
 
 \theoremstyle{remark}
