--- a/introduction.tex
+++ b/introduction.tex
@@ -26,7 +26,8 @@ Call a function $f:X\to \QQ$ $\cL$-constructible (or $\cL_2$-constructible) if i
 \item $\alpha:X\to \ZZ$
 \item $X\to \ZZ:x\mapsto q_K^{\beta(x)}$,
 \end{enumerate}
-where $\alpha$ and $\beta$ are $\cL_2$-definable and $\ZZ$-valued.  
+where $\alpha$ and $\beta$ are $\cL_2$-definable and $\ZZ$-valued. 
+%A function $f: X \subseteq S \times T$ is constructible over $S$ if  
 \end{defn}
 
 
