deleted some red

--- a/integration.tex
+++ b/integration.tex
@@ -110,7 +110,7 @@ These are both constructible functions, so there exists a constructible function
 Hence, returning to the computation of $\int_{X_s} f(s,x)|dx|$, we need to compute a sum of the form
 \[\sum_{\gamma \in B_s}\left[ \left(\sum_{i=1}^r a_i q_K^{\gamma_{i0}} \prod_{j=1}^{r'}\gamma_{ij}\right) \cdot h(s,\gamma)\right]\]
 To compute this sum over gamma, we need to specify how $h(s,\gamma)$ depends on $\gamma$. 
-By (an interation of) proposition \ref{prop:partialcd2}, we may assume that the variables $\gamma_i$ only occur in the functions $\alpha_i$, $\beta_i$ (in \eqref{eq:ineq} and \eqref{eq:nocond} ) in a {\color{red} linear} way (possibly after refining the cell decomposition). Hence, the problem is reduced to showing that a sum of the form 
+By (an interation of) proposition \ref{prop:partialcd2}, we may assume that the variables $\gamma_i$ only occur in the functions $\alpha_i$, $\beta_i$ (in \eqref{eq:ineq} and \eqref{eq:nocond} ) in a { linear} way (possibly after refining the cell decomposition). Hence, the problem is reduced to showing that a sum of the form 
 \[\sum_{\gamma \in B_s} \sum_{i=1}^r \left(a_i q_K^{\nu_i(s)}q_K^{b_i(\gamma)} \prod_{j=1}^{R}\gamma_{j}^{a_{ij}}\right),\]
 %$\sum_{\gamma \in \Pi_{\gamma}(A_s)} q_K^{a\gamma + \delta(s)} $ 
 where the $b_i$ are Presburger definable linear functions, %(i.e., of the form $\sum_{j=1}^R{\mu_{ij}\left(\frac{\gamma_{i}-k_i}{N}\right)}$)
