Versie van 17 november (na skype met Pablo)

--- a/nov.tex
+++ b/nov.tex
@@ -6,7 +6,7 @@
 \usepackage[T1]{fontenc}
 %\usepackage[all]{xypic}
 %\usepackage{amsmath}
-\usepackage{color,mdwlist}
+\usepackage{color,mdwlist,enumitem}
 %\usepackage{showkeys}
 %\usepackage{tikz}
 %\usepackage{amsrefs}
@@ -266,6 +266,7 @@
 \include{preparation}
 \include{integration}
 \include{rationality}
+\include{relativePminimality}
 \appendix
 \include{wellordered}
 
