--- a/nov.tex
+++ b/nov.tex
@@ -54,7 +54,7 @@
 \newcommand{\Iva}{\operatorname{Iva}}
 \newcommand{\Lm}{\mathcal{L}}
 \newcommand{\Lring}{\Lm_{\text{ring}}}
-
+\newcommand{\Lringtwo}{\Lm_{\text{ring,2}}}
 
 
 \def\RDefe{Q^{\rm exp}}
